# govlens

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml
src/govlens/: __init__.py  audit.py  calldata.py  cli.py  config.py  curve.py  gist.py  model.py  pipeline.py  presentation.py  report.py  resupply.py  store.py  telegram.py
src/govlens/checks/: __init__.py  curve.py  resupply.py
src/govlens/investigator/: AGENTS.md  UPSTREAM.md  __init__.py
src/govlens/investigator/contexts/: curve.md  resupply.md
src/govlens/investigator/lib/: __init__.py  analysis.py  analysis_cache.py  analysis_contracts.py  analysis_decode.py  analysis_trace.py  explorer.py  network.py
tests/: test_product.py  test_protocol_integrations.py
tests/fixtures/: curve_aragon_vote_223.json  resupply_proposal_23.json
